--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.12",
-		"@sveltejs/kit": "^1.0.0-next.75",
+		"@sveltejs/kit": "^1.0.0-next.76",
 		"cookie": "^0.4.1",
 		"dotenv": "^8.2.0",
 		"eslint": "^7.22.0",
@@ -24,5 +24,8 @@
 		"svelte-preprocess": "^4.0.0",
 		"vite": "^2.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-local-storage-store": "^0.1.4"
+	}
 }
