--- a/app/package.json
+++ b/app/package.json
@@ -1,30 +1,33 @@
 {
-	"name": "svelte",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"start": "svelte-kit start",
-		"lint": "eslint --ignore-path .gitignore ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.12",
-		"@sveltejs/kit": "^1.0.0-next.78",
-		"cookie": "^0.4.1",
-		"dotenv": "^8.2.0",
-		"eslint": "^7.22.0",
-		"eslint-plugin-svelte3": "^3.1.0",
-		"jsonwebtoken": "^8.5.1",
-		"knex": "^0.95.4",
-		"pg": "^8.6.0",
-		"sass": "^1.0.0",
-		"svelte": "^3.37.0",
-		"svelte-check": "^1.4.0",
-		"svelte-preprocess": "^4.0.0",
-		"vite": "^2.1.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"svelte-local-storage-store": "^0.1.4"
-	}
+  "name": "svelte",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "start": "svelte-kit start",
+    "lint": "prettier --check . && eslint --ignore-path .gitignore .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.12",
+    "@sveltejs/kit": "^1.0.0-next.78",
+    "cookie": "^0.4.1",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-svelte3": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.95.4",
+    "pg": "^8.6.0",
+    "prettier": "~2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
+    "sass": "^1.0.0",
+    "svelte": "^3.37.0",
+    "svelte-preprocess": "^4.0.0",
+    "vite": "^2.1.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "svelte-local-storage-store": "^0.1.4"
+  }
 }
