--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
     "pg": "^8.6.0",
+    "postcss-import": "^14.0.1",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "sass": "^1.0.0",
