--- a/app/package.json
+++ b/app/package.json
@@ -11,14 +11,9 @@
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.0.0-next.16",
     "@sveltejs/kit": "^1.0.0-next.85",
-    "cookie": "^0.4.1",
-    "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.4",
-    "pg": "^8.6.0",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "sass": "^1.0.0",
@@ -29,7 +24,12 @@
   "type": "module",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "svelte-fa": "^2.2.0",
+    "cookie": "^0.4.1",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.95.4",
+    "pg": "^8.6.0",
+    "svelte-awesome": "^2.3.1",
     "svelte-local-storage-store": "^0.1.4"
   }
 }
