--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,6 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
     "pg": "^8.6.0",
-    "svelte-awesome": "^2.3.1",
-    "svelte-local-storage-store": "^0.1.4"
+    "svelte-awesome": "^2.3.1"
   }
 }
