--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.0.0-next.16",
-    "@sveltejs/kit": "^1.0.0-next.89",
+    "@sveltejs/kit": "^1.0.0-next.90",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.1.0",
@@ -30,6 +30,7 @@
     "knex": "^0.95.4",
     "pg": "^8.6.0",
     "svelte-awesome": "^2.3.1",
+    "svelte-local-storage-store": "^0.1.4",
     "svelte-typeahead": "kamholz/svelte-typeahead"
   }
 }
