--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
     "pg": "^8.6.0",
+    "svelecte": "kamholz/svelecte",
     "svelte-awesome": "^2.3.1",
     "svelte-local-storage-store": "^0.1.4",
     "svelte-select": "^3.17.0",
