--- a/app/package.json
+++ b/app/package.json
@@ -5,17 +5,14 @@
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
-    "lint": "prettier --check . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write ."
+    "lint": "eslint --ignore-path .gitignore .",
+    "format": "eslint --ignore-path .gitignore --fix ."
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.0.0-next.17",
     "@sveltejs/kit": "^1.0.0-next.92",
     "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-svelte3": "^3.1.0",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
+    "eslint-plugin-svelte3": "^3.2.0",
     "sass": "^1.0.0",
     "svelte": "^3.37.0",
     "svelte-preprocess": "^4.7.1",
