--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@sveltejs/adapter-node": "^1.0.0-next.17",
     "@sveltejs/kit": "^1.0.0-next.92",
     "eslint": "^7.22.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "sass": "^1.0.0",
     "svelte": "^3.37.0",
