--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.6.0",
     "svelecte": "kamholz/svelecte#latest",
     "svelte-awesome": "^2.3.1",
-    "svelte-local-storage-store": "^0.1.4"
+    "svelte-local-storage-store": "^0.1.4",
+    "svelte-popperjs": "^1.2.3"
   }
 }
