--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "cookie": "^0.4.1",
     "dotenv": "^8.2.0",
