--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
     "pg": "^8.6.0",
-    "svelecte": "kamholz/svelecte#latest",
+    "svelecte": "kamholz/svelecte#highlightSearch",
     "svelte-awesome": "^2.3.1",
     "svelte-local-storage-store": "^0.1.4",
     "svelte-popperjs": "^1.2.3"
