--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,7 @@
     "knex": "^0.95.4",
     "pg": "^8.6.0",
     "socket.io-client": "^4.0.1",
-    "svelecte": "kamholz/svelecte#highlightSearch",
+    "svelecte": "mskocik/svelecte",
     "svelte-awesome": "^2.3.1",
     "svelte-local-storage-store": "^0.1.4",
     "svelte-popperjs": "^1.2.3"
