--- a/app/package.json
+++ b/app/package.json
@@ -31,7 +31,7 @@
     "socket.io-client": "^4.0.1",
     "svelecte": "^1.3.1",
     "svelte-awesome": "^2.3.1",
-    "svelte-local-storage-store": "^0.2.0",
+    "svelte-persistent-store": "kamholz/svelte-persistent-store",
     "svelte-popperjs": "^1.2.3"
   }
 }
