--- a/app/package.json
+++ b/app/package.json
@@ -15,9 +15,8 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "sass": "^1.0.0",
-    "svelte": "^3.37.0",
-    "svelte-preprocess": "^4.7.1",
-    "vite": "^2.2.3"
+    "svelte": "^3.38.3",
+    "svelte-preprocess": "^4.7.1"
   },
   "type": "module",
   "dependencies": {
