--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.8",
+    "leaflet": "^1.7.1",
     "pg": "^8.7.1",
     "socket.io-client": "^4.0.1",
     "svelecte": "^1.3.4",
