--- a/app/package.json
+++ b/app/package.json
@@ -9,27 +9,29 @@
     "lint": "eslint --ignore-path .gitignore .",
     "format": "eslint --ignore-path .gitignore --fix ."
   },
-  "dependencies": {
+  "devDependencies": {
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@sveltejs/adapter-node": "^1.0.0-next.43",
     "@sveltejs/kit": "^1.0.0-next.154",
     "cookie": "^0.4.1",
-    "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^3.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.8",
     "leaflet": "^1.7.1",
-    "pg": "^8.7.1",
     "sass": "^1.36.0",
-    "socket.io-client": "^4.0.1",
     "svelecte": "^1.3.4",
     "svelte": "^3.42.2",
     "svelte-awesome": "^2.3.1",
     "svelte-persistent-store": "kamholz/svelte-persistent-store",
     "svelte-popperjs": "^1.2.6",
     "svelte-preprocess": "^4.7.4"
+  },
+  "dependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^8.2.0",
+    "knex": "^0.95.8",
+    "pg": "^8.7.1",
+    "socket.io-client": "^4.0.1"
   }
 }
