--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "leaflet": "^1.7.1",
+    "leaflet-tooltip-layout": "kamholz/leaflet-tooltip-layout",
     "sass": "^1.36.0",
     "svelecte": "^1.3.4",
     "svelte": "^3.42.2",
