--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "svelte-preprocess": "^4.7.4"
   },
   "dependencies": {
+    "ajv": "^8.6.2",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.8",
