--- a/app/package.json
+++ b/app/package.json
@@ -19,12 +19,12 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "leaflet": "^1.7.1",
-    "leaflet-tooltip-layout": "kamholz/leaflet-tooltip-layout",
+    "leaflet-tooltip-layout": "github:kamholz/leaflet-tooltip-layout",
     "sass": "^1.36.0",
     "svelecte": "^1.3.4",
     "svelte": "^3.42.4",
     "svelte-awesome": "^2.3.1",
-    "svelte-persistent-store": "kamholz/svelte-persistent-store",
+    "svelte-persistent-store": "github:kamholz/svelte-persistent-store",
     "svelte-popperjs": "^1.2.6",
     "svelte-preprocess": "^4.7.4"
   },
