--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,9 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "leaflet": "^1.7.1",
     "leaflet-tooltip-layout": "github:kamholz/leaflet-tooltip-layout",
+    "leaflet.fullscreen": "^2.0.0",
     "sass": "^1.36.0",
+    "screenfull": "^5.1.0",
     "svelecte": "^1.3.4",
     "svelte": "^3.42.4",
     "svelte-awesome": "^2.3.1",
