--- a/app/package.json
+++ b/app/package.json
@@ -10,36 +10,36 @@
     "format": "eslint --ignore-path .gitignore --fix ."
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.8",
+    "@babel/eslint-parser": "^7.16.5",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@sveltejs/adapter-node": "^1.0.0-next.59",
     "@sveltejs/kit": "^1.0.0-next.215",
     "cookie": "^0.4.1",
-    "eslint": "^8.1.0",
+    "eslint": "^8.6.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "hex-alpha": "^1.3.0",
     "leaflet": "^1.7.1",
     "leaflet-tooltip-layout": "github:kamholz/leaflet-tooltip-layout",
-    "leaflet.fullscreen": "github:kamholz/leaflet.fullscreen",
-    "sass": "^1.43.3",
-    "screenfull": "^5.1.0",
+    "leaflet.fullscreen": "^2.2.0",
+    "sass": "^1.45.2",
+    "screenfull": "^5.2.0",
     "svelecte": "^3.5.2",
     "svelte": "^3.44.3",
     "svelte-awesome": "^2.4.2",
     "svelte-persistent-store": "github:kamholz/svelte-persistent-store",
-    "svelte-popperjs": "^1.2.6",
-    "svelte-preprocess": "^4.9.8",
-    "svelte-simple-modal": "^1.0.3",
+    "svelte-popperjs": "^1.2.8",
+    "svelte-preprocess": "^4.10.1",
+    "svelte-simple-modal": "^1.2.0",
     "yiq": "^4.0.0"
   },
   "dependencies": {
-    "ajv": "^8.6.3",
+    "ajv": "^8.8.2",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.11",
+    "knex": "^0.95.12",
     "pg": "^8.7.1",
-    "socket.io-client": "^4.3.2"
+    "socket.io-client": "^4.4.0"
   }
 }
