--- a/app/jsconfig.json
+++ b/app/jsconfig.json
@@ -2,10 +2,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "$lib": ["src/lib"],
       "$lib/*": ["src/lib/*"],
       "$components/*": ["src/components/*"],
       "$actions/*": ["src/actions/*"]
     }
   },
+  "extends": "./.svelte-kit/tsconfig.json",
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
 }
