--- a/app/package.json
+++ b/app/package.json
@@ -13,8 +13,8 @@
     "@babel/eslint-parser": "^7.18.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@sveltejs/adapter-node": "^1.0.0-next.78",
-    "@sveltejs/kit": "^1.0.0-next.347",
+    "@sveltejs/adapter-node": "^1.0.0-next.96",
+    "@sveltejs/kit": "^1.0.0-next.512",
     "eslint": "^8.16.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -31,6 +31,7 @@
     "svelte-popperjs": "^1.2.10",
     "svelte-preprocess": "^4.10.6",
     "svelte-simple-modal": "^1.3.3",
+		"vite": "^3.1.0",
     "yiq": "^4.0.0"
   },
   "dependencies": {
