--- a/app/package.json
+++ b/app/package.json
@@ -13,8 +13,8 @@
     "@babel/eslint-parser": "^7.19.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@sveltejs/adapter-node": "^1.0.0-next.100",
-    "@sveltejs/kit": "^1.0.0-next.551",
+    "@sveltejs/adapter-node": "^1.0.0",
+    "@sveltejs/kit": "^1.0.0",
     "eslint": "^8.25.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -31,7 +31,7 @@
     "svelte-popperjs": "^1.2.10",
     "svelte-preprocess": "^4.10.6",
     "svelte-simple-modal": "^1.3.3",
-    "vite": "^3.1.0",
+    "vite": "^4.0.1",
     "yiq": "^4.0.0"
   },
   "dependencies": {
