--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "hex-alpha": "^1.3.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "1.7.1",
     "leaflet-tooltip-layout": "github:kamholz/leaflet-tooltip-layout",
     "leaflet.fullscreen": "^2.3.0",
     "sass": "^1.55.0",
