--- a/app/package.json
+++ b/app/package.json
@@ -13,11 +13,12 @@
     "@babel/eslint-parser": "^7.19.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@sveltejs/adapter-node": "^1.2.4",
-    "@sveltejs/kit": "^1.21",
+    "@macfja/svelte-persistent-store": "^2.4.1",
+    "@sveltejs/adapter-node": "^5.2.0",
+    "@sveltejs/kit": "^2.5.18",
     "eslint": "^8.25.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.4.2",
     "hex-alpha": "^1.3.0",
     "leaflet": "1.7.1",
     "leaflet-tooltip-layout": "github:kamholz/leaflet-tooltip-layout",
@@ -25,13 +26,12 @@
     "sass": "^1.55.0",
     "screenfull": "^5.2.0",
     "svelecte": "^3.10.2",
-    "svelte": "^3.59.2",
+    "svelte": "^4",
     "svelte-awesome": "^3.2.0",
-    "svelte-persistent-store": "github:kamholz/svelte-persistent-store",
     "svelte-popperjs": "^1.2.10",
-    "svelte-preprocess": "^5.0.4",
+    "svelte-preprocess": "^6",
     "svelte-simple-modal": "^1.3.3",
-    "vite": "^4.3.9",
+    "vite": "^5.0.3",
     "yiq": "^4.0.0"
   },
   "dependencies": {
