--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@macfja/svelte-persistent-store": "^2.4.1",
     "@sveltejs/adapter-node": "^5.2.0",
     "@sveltejs/kit": "^2.5.18",
+    "@sveltejs/vite-plugin-svelte": "^3",
     "eslint": "^8.25.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-svelte": "^2.4.2",
@@ -31,6 +32,7 @@
     "svelte-popperjs": "^1.2.10",
     "svelte-preprocess": "^6",
     "svelte-simple-modal": "^1.3.3",
+    "typescript": "^5",
     "vite": "^5.3.3",
     "yiq": "^4.0.0"
   },
