--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@macfja/svelte-persistent-store": "^2.4.1",
     "@sveltejs/adapter-node": "^5.2.0",
-    "@sveltejs/kit": "^2.5.18",
+    "@sveltejs/kit": "^2.37.0",
     "@sveltejs/vite-plugin-svelte": "^3",
     "eslint": "^8.25.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
@@ -24,16 +24,16 @@
     "leaflet": "1.7.1",
     "leaflet-tooltip-layout": "github:kamholz/leaflet-tooltip-layout",
     "leaflet.fullscreen": "^2.3.0",
-    "sass": "^1.55.0",
+    "sass": "^1.91.0",
     "screenfull": "^5.2.0",
     "svelecte": "^3.10.2",
     "svelte": "^4.2.18",
-    "svelte-awesome": "^3.2.0",
+    "svelte-awesome": "3.3.4",
     "svelte-popperjs": "^1.2.10",
     "svelte-preprocess": "^6",
     "svelte-simple-modal": "^1.3.3",
     "typescript": "^5",
-    "vite": "^5.3.3",
+    "vite": "^5.4.19",
     "yiq": "^4.0.0"
   },
   "dependencies": {
